Fixed: Mobile mode drop down menu needs a high z-index to show above Google Ads.

--- a/forum/styles/purple/mobile.css
+++ b/forum/styles/purple/mobile.css
@@ -173,11 +173,12 @@ body {
     position: absolute;
     right: 0;
     top: 0;
+    z-index: 9999;
 }
 
 #nav.menu_open {
     border-bottom: 1px solid rgba(0, 0, 0, 0.1);
-    box-shadow: 3px 3px 3px 3px rgba(0, 0, 0, 0.2);
+    box-shadow: 2px 4px 10px rgba(0, 0, 0, 0.2);
     padding: 0 0 5px;
 }
 
